--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -73,6 +73,10 @@ smmap==4.0.0 # LEVEL_01 # can't update to 5.0.0 yet, due to gitdb ?
 pyparsing==2.4.7 # LEVEL_01 # google-api-python-client
 #
 stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
+#
+optional-django==0.1.0 # LEVEL_01 # nodejs needs it # Utils for apps to provide optional support for django applications
+#
+textblob==0.15.3 # LEVEL_03 # spacytextblob 3.0.1 requires textblob<0.16.0,>=0.15.3 # Simple, Pythonic text processing. Sentiment analysis, part-of-speech tagging, noun phrase parsing
 
 #
 # Generic Low Level Tools
@@ -186,7 +190,6 @@ botocore==1.22.2 # LEVEL_03 # Low-level, data-driven core of boto 3 # required b
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
 spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
-textblob==0.15.3 # LEVEL_03 # spacytextblob 3.0.1 requires textblob<0.16.0,>=0.15.3 # Simple, Pythonic text processing. Sentiment analysis, part-of-speech tagging, noun phrase parsing
 # spacy-transformers  # downgrades transformers !!
 #
 transformers==4.11.3 # LEVEL_04
@@ -755,8 +758,7 @@ webob==1.8.7 # LEVEL_01
 zope_deprecation==4.4.0 # LEVEL_02
 zope_interface==5.4.0 # LEVEL_02
 #
-nodejs==0.1.1 # LEVEL_02
-optional-django==0.1.0 # LEVEL_01
+nodejs==0.1.1 # LEVEL_02 # Python bindings and utils for Node.js and io.js
 #
 olefile==0.46 # LEVEL_01
 #
