--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -216,9 +216,16 @@ distributed==2021.10.0 # LEVEL_04
 # pynvml==11.0.0 # LEVEL_01 # POTENTIALLY_UNUSED # Python Bindings for the NVIDIA Management Library
 #
 scikit-image==0.18.3 # LEVEL_04
-scikit-learn==1.0 # LEVEL_03
+scikit-learn==1.0.1 # LEVEL_03
 pyod==0.9.4 # LEVEL_05 # outlyer detection
 jax==0.2.24 # LEVEL_03 # Differentiate, compile, and transform Numpy code
+#
+rapidminer==9.10.0.0 # LEVEL_05 # Tools for running RapidMiner processes and managing RapidMiner repositories.
+zeep==4.1.0 # LEVEL_04 # A modern/fast Python SOAP client based on lxml / requests
+requests-file==1.5.1 # LEVEL_03 # File transport adapter for Requests
+cached-property==1.5.2 # LEVEL_01 # A decorator for caching properties in classes
+isodate==0.6.0 # LEVEL_02 # An ISO 8601 date/time/duration parser and formatter
+platformdirs==2.4.0 # LEVEL_01 # module for determining appropriate platform-specific dirs, e.g. a "user data dir"
 
 #
 # Computer Vision
@@ -647,7 +654,7 @@ tzdata==2021.4 # LEVEL_01
 validators==0.18.2 # LEVEL_02
 #
 GitPython==3.1.24 # LEVEL_03
-gitdb==4.0.9 # LEVEL_02
+gitdb==4.0.9 # LEVEL_02 # Git Object Database
 #
 #
 jqdatasdk==1.8.10 # LEVEL_04
@@ -669,7 +676,7 @@ nvidia-ml-py3==7.352.0 # LEVEL_01
 opencensus==0.8.0 # LEVEL_05
 opencensus-context==0.1.2 # LEVEL_01
 py-spy==0.3.10 # LEVEL_01
-pydeck==0.7.0 # LEVEL_09
+pydeck==0.7.1 # LEVEL_09 # Widget for deck.gl maps
 PyMySQL==1.0.2 # LEVEL_01
 cattrs==1.8.0 # LEVEL_02
 #
@@ -712,7 +719,7 @@ fire==0.4.0 # LEVEL_02
 #
 geopandas==0.10.2 # LEVEL_04
 pyproj==3.2.1 # LEVEL_02
-shapely==1.7.1 # LEVEL_01
+shapely==1.8.0 # LEVEL_01 # Geometric objects, predicates, and operations
 #
 #geotiff==0.2.3 # LEVEL_04 # has old dependencies on tifffile
 geos==0.2.3 # LEVEL_04
