--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -77,6 +77,8 @@ stable-baselines3==1.2.0 # LEVEL_04 # Pytorch version of Stable Baselines, imple
 optional-django==0.1.0 # LEVEL_01 # nodejs needs it # Utils for apps to provide optional support for django applications
 #
 textblob==0.15.3 # LEVEL_03 # spacytextblob 3.0.1 requires textblob<0.16.0,>=0.15.3 # Simple, Pythonic text processing. Sentiment analysis, part-of-speech tagging, noun phrase parsing
+#
+docutils==0.17.1 # LEVEL_01 # sphinx 4.2.0 requires docutils<0.18,>=0.14
 
 #
 # Generic Low Level Tools
@@ -138,7 +140,7 @@ pyro-api==0.1.2 # LEVEL_01 # probabilistic modeling and inference
 pyro-ppl==1.7.0 # LEVEL_03
 #
 torch==1.10.0 # LEVEL_02
-torch-optimizer==0.1.0 # LEVEL_04
+torch-optimizer==0.2.0 # LEVEL_04
 torchaudio==0.10.0 # LEVEL_03
 torchvision==0.11.1 # LEVEL_03
 pytorch-ranger==0.1.1 # LEVEL_03
@@ -158,7 +160,7 @@ gym==0.21.0 # LEVEL_02
 gensim==4.1.2 # LEVEL_03
 #
 openai==0.10.5 # LEVEL_04
-pandas-stubs==1.2.0.33 # LEVEL_01 # needed by openai
+pandas-stubs==1.2.0.35 # LEVEL_01 # needed by openai
 #
 #ktrain>=0.27.2
 #
@@ -184,8 +186,8 @@ babel==2.9.1 # LEVEL_02
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.19.2 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.22.2 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.19.4 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.22.4 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
@@ -255,7 +257,7 @@ tiingo==0.14.0 # LEVEL_03 # Python REST Client for interacting with the Tiingo F
 #
 trading-calendars==2.1.1 # LEVEL_04
 pandas-market-calendars==3.2 # LEVEL_05
-exchange-calendars==3.3 # LEVEL_04
+exchange-calendars==3.4 # LEVEL_04
 pandas-finance==0.1.2 # LEVEL_05
 #
 yahoofinancials==1.6 # LEVEL_03 # https://github.com/JECSand/yahoofinancials
@@ -292,7 +294,7 @@ scs==2.1.4 # LEVEL_03
 #
 qtconsole==5.1.1 # LEVEL_05
 qtpy==1.11.2 # LEVEL_01
-pysimplegui==4.51.7 # LEVEL_01
+pysimplegui==4.53.0 # LEVEL_01
 pyqt5==5.15.5 # LEVEL_02
 pyqt5-qt5==5.15.2 # LEVEL_01
 pyqt5-sip==12.9.0 # LEVEL_01
@@ -326,8 +328,8 @@ dash-renderer==1.9.1 # LEVEL_01
 #
 # Google ..
 #
-google-api-core==2.1.1 # LEVEL_04
-google-api-python-client==2.27.0 # LEVEL_05 # Google API Client Library for Python
+google-api-core==2.2.0 # LEVEL_04
+google-api-python-client==2.28.0 # LEVEL_05 # Google API Client Library for Python
 google-auth-httplib2==0.1.0 # LEVEL_04
 google-auth-oauthlib==0.4.6 # LEVEL_04
 google-pasta==0.2.0 # LEVEL_02
@@ -377,7 +379,7 @@ pydeps==1.10.12 # LEVEL_02 # display module dependencies # cd src/main; pydeps .
 autopep8==1.6.0 # LEVEL_02 # using fix_file ..
 mypy==0.910 # LEVEL_02
 mypy-extensions==0.4.3 # LEVEL_01 # investigate more for automated checking
-pytype==2021.10.18 # LEVEL_04 # type inferencer
+pytype==2021.10.25 # LEVEL_04 # type inferencer
 importlab==0.6.1 # LEVEL_02
 libcst==0.3.21 # LEVEL_03
 ninja==1.10.2.2 # LEVEL_01 # small build system with a focus on speed
@@ -403,7 +405,7 @@ anyio==3.3.4 # LEVEL_02
 appdirs==1.4.4 # LEVEL_01
 appnope==0.1.2 # LEVEL_01
 argon2-cffi==21.1.0 # LEVEL_03
-arrow==1.2.0 # LEVEL_03
+arrow==1.2.1 # LEVEL_03
 ast-decompiler==0.4.0 # LEVEL_01
 astunparse==1.6.3 # LEVEL_02
 async-timeout==3.0.1 # LEVEL_01
@@ -435,7 +437,6 @@ deprecation==2.1.0 # LEVEL_03
 dill==0.3.4 # LEVEL_01
 dm-tree==0.1.6 # LEVEL_02
 dnspython==2.1.0 # LEVEL_01
-docutils==0.17.1 # LEVEL_01
 elasticsearch==7.15.1 # LEVEL_02
 email-validator==1.1.3 # LEVEL_02
 entrypoints==0.3 # LEVEL_01
@@ -455,7 +456,7 @@ future==0.18.2 # LEVEL_01
 geographiclib==1.52 # LEVEL_01
 geopy==2.2.0 # LEVEL_02
 gin-config==0.4.0 # LEVEL_01
-grpcio==1.41.0 # LEVEL_02
+grpcio==1.41.1 # LEVEL_02
 heapdict==1.0.1 # LEVEL_01
 hijri-converter==2.2.2 # LEVEL_01
 hsluv==5.0.2 # LEVEL_01
@@ -505,7 +506,7 @@ pandocfilters==1.5.0 # LEVEL_01
 params-flow==0.8.2 # LEVEL_02
 parso==0.8.2 # LEVEL_01
 partd==1.2.0 # LEVEL_02
-pathy==0.6.0 # LEVEL_03
+pathy==0.6.1 # LEVEL_03
 patsy==0.5.2 # LEVEL_02
 pexpect==4.8.0 # LEVEL_02
 pickleshare==0.7.5 # LEVEL_01
@@ -515,7 +516,7 @@ preshed==3.0.6 # LEVEL_02
 prometheus-client==0.11.0 # LEVEL_01
 promise==2.3 # LEVEL_02
 prompt-toolkit==3.0.21 # LEVEL_02
-proto-plus==1.19.5 # LEVEL_02
+proto-plus==1.19.6 # LEVEL_02
 protobuf==3.19.0 # LEVEL_01
 psutil==5.8.0 # LEVEL_01
 ptyprocess==0.7.0 # LEVEL_01
@@ -523,7 +524,7 @@ py-cpuinfo==8.0.0 # LEVEL_01
 py-lets-be-rational==1.0.1 # LEVEL_02
 py-params==0.10.2 # LEVEL_01
 pyanalyze==0.3.1 # LEVEL_04
-pyarrow==5.0.0 # LEVEL_02
+pyarrow==6.0.0 # LEVEL_02
 pyasn1==0.4.8 # LEVEL_01
 pyasn1-modules==0.2.8 # LEVEL_02
 pycares==4.1.2 # LEVEL_03
@@ -583,7 +584,7 @@ toml==0.10.2 # LEVEL_01
 tomlkit==0.7.2 # LEVEL_01
 tornado==6.1 # LEVEL_01 # A Python web framework and asynchronous networking library
 tqdm==4.62.3 # LEVEL_01 # A Fast, Extensible Progress Meter
-traitlets==5.1.0 # LEVEL_01
+traitlets==5.1.1 # LEVEL_01
 typed-ast==1.4.3 # LEVEL_01
 typeguard==2.13.0 # LEVEL_01
 typer==0.4.0 # LEVEL_02
@@ -648,9 +649,9 @@ trio==0.19.0 # LEVEL_03
 trio-websocket==0.9.2 # LEVEL_04
 wsproto==1.0.0 # LEVEL_02
 #
-tzlocal==4.0.1 # LEVEL_03
+tzlocal==4.0.2 # LEVEL_03
 pytz-deprecation-shim==0.1.0.post0 # LEVEL_02
-tzdata==2021.4 # LEVEL_01
+tzdata==2021.5 # LEVEL_01
 validators==0.18.2 # LEVEL_02
 #
 GitPython==3.1.24 # LEVEL_03
