--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -447,7 +447,7 @@ deprecation==2.1.0 # LEVEL_03
 dill==0.3.4 # LEVEL_01
 dm-tree==0.1.6 # LEVEL_02
 dnspython==2.1.0 # LEVEL_01
-elasticsearch==7.15.1 # LEVEL_02
+elasticsearch==7.15.1 # LEVEL_02 # Python client for Elasticsearch
 email-validator==1.1.3 # LEVEL_02
 entrypoints==0.3 # LEVEL_01
 ephem==4.1 # LEVEL_01
