--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -81,6 +81,8 @@ textblob==0.15.3 # LEVEL_03 # LOCKED # spacytextblob 3.0.1 requires textblob<0.1
 docutils==0.17.1 # LEVEL_01 # LOCKED # sphinx 4.2.0 requires docutils<0.18,>=0.14
 #
 tenacity==6.3.1 # LEVEL_02 # LOCKED # luigi requires tenacity<7,>=6.3.0 # Retry code until it succeeds
+#
+agate==1.6.1 # LEVEL_03 # LOCKED # need to figure out why # A data analysis library that is optimized for humans instead of machines
 
 #
 # Generic Low Level Tools
@@ -108,7 +110,7 @@ box2d-py==2.3.8 # LEVEL_01
 #ccxt==1.58.26 # LEVEL_01
 #
 tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without Tensorflow
-ray==1.7.1 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications
+ray==1.7.0 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications.
 lz4==3.1.3 # LEVEL_01
 gputil==1.4.0 # LEVEL_01 # Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
@@ -145,7 +147,7 @@ torch==1.10.0 # LEVEL_02
 torch-optimizer==0.2.0 # LEVEL_04
 torchaudio==0.10.0 # LEVEL_03
 torchvision==0.11.1 # LEVEL_03
-pytorch-ranger==0.1.1 # LEVEL_03
+pytorch-ranger==0.1.1 # LEVEL_03 # Ranger - a synergistic optimizer using RAdam (Rectified Adam) and LookAhead in one codebase
 #
 theano==1.0.5 # LEVEL_03
 nose==1.3.7 # LEVEL_01
@@ -183,20 +185,20 @@ holidays==0.11.3.1 # LEVEL_03 # for prophet
 #
 nltk==3.6.5 # LEVEL_02
 #
-babel==2.9.1 # LEVEL_02
+babel==2.9.1 # LEVEL_02 # Internationalization utilities
 #
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.19.5 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.22.5 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.19.6 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.22.6 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.3 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
 spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
 # spacy-transformers  # downgrades transformers !!
 #
-transformers==4.11.3 # LEVEL_04
+transformers==4.12.0 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
 datasets==1.14.0 # LEVEL_04
 #
 tokenizers==0.10.3 # LEVEL_01
@@ -287,7 +289,7 @@ int-date==0.1.8 # LEVEL_03
 pyportfolioopt==1.5.1 # LEVEL_06
 cvxpy==1.1.15 # LEVEL_05
 ecos==2.0.7.post1 # LEVEL_03
-osqp==0.6.2.post0 # LEVEL_04
+osqp==0.6.2.post0 # LEVEL_04 # OSQP: The Operator Splitting QP Solver
 qdldl==0.1.5.post0 # LEVEL_03
 scs==2.1.4 # LEVEL_03
 
@@ -312,7 +314,7 @@ networkx==2.6.3 # LEVEL_01 # includes drawing graphs
 #
 vispy==0.9.3 # LEVEL_02
 #
-kivy==2.0.0 # LEVEL_04
+kivy==2.0.0 # LEVEL_04 # A software library for rapid development of hardware-accelerated multitouch applications
 kivy-examples==2.0.0 # LEVEL_04
 kivy-garden==0.1.4 # LEVEL_03
 kiwisolver==1.3.2 # LEVEL_01
@@ -334,14 +336,24 @@ plotly==5.3.1 # LEVEL_03 # An open-source, interactive data visualization librar
 #
 # Google ..
 #
-google-api-core==2.2.0 # LEVEL_04
+google-cloud-bigquery==2.29.0 # LEVEL_06 # Google BigQuery API client library
+google-cloud-core==2.1.0 # LEVEL_05 # Google Cloud API client core library
+google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
+google-resumable-media==2.1.0 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
+#
+google-api-core==2.2.1 # LEVEL_04 # Google API client core library
 google-api-python-client==2.28.0 # LEVEL_05 # Google API Client Library for Python
 google-auth-httplib2==0.1.0 # LEVEL_04
 google-auth-oauthlib==0.4.6 # LEVEL_04
-google-pasta==0.2.0 # LEVEL_02
-googleapis-common-protos==1.53.0 # LEVEL_02
+google-pasta==0.2.0 # LEVEL_02 # pasta is an AST-based Python refactoring library
+googleapis-common-protos==1.53.0 # LEVEL_02 # Common protobufs used in Google APIs
 googletransx==2.4.2 # LEVEL_03
 uritemplate==4.1.1 # LEVEL_01 # required by google-api-python-client
+
+# Azure
+azure-storage-blob==12.9.0 # LEVEL_05 # Microsoft Azure Blob Storage Client Library for Python
+azure-core==1.19.0 # LEVEL_03 # Microsoft Azure Core Library for Python
+azure-common==1.1.27 # LEVEL_01 # Microsoft Azure Client Library for Python (Common)
 
 #
 # Jupyter
@@ -387,7 +399,7 @@ mypy==0.910 # LEVEL_02
 mypy-extensions==0.4.3 # LEVEL_01 # investigate more for automated checking
 pytype==2021.10.25 # LEVEL_04 # type inferencer
 importlab==0.6.1 # LEVEL_02
-libcst==0.3.21 # LEVEL_03
+libcst==0.3.21 # LEVEL_03 #  A concrete syntax tree with AST-like properties for Python 3.5, 3.6, 3.7 and 3.8 programs
 ninja==1.10.2.2 # LEVEL_01 # small build system with a focus on speed
 #
 pipx==0.16.4 # LEVEL_03
@@ -466,7 +478,8 @@ future==0.18.2 # LEVEL_01
 geographiclib==1.52 # LEVEL_01
 geopy==2.2.0 # LEVEL_02
 gin-config==0.4.0 # LEVEL_01
-grpcio==1.41.1 # LEVEL_02
+grpcio-status==1.41.1 # LEVEL_03 # Status proto mapping for gRPC
+grpcio==1.41.1 # LEVEL_02 # HTTP/2-based RPC framework
 heapdict==1.0.1 # LEVEL_01
 hijri-converter==2.2.2 # LEVEL_01
 hsluv==5.0.2 # LEVEL_01
@@ -483,8 +496,6 @@ jedi==0.18.0 # LEVEL_02
 jinja2==3.0.2 # LEVEL_02 # template engine
 jmespath==0.10.0 # LEVEL_01
 joblib==1.1.0 # LEVEL_01
-json5==0.9.6 # LEVEL_01
-jsonschema==4.1.2 # LEVEL_02
 korean-lunar-calendar==0.2.1 # LEVEL_01
 llvmlite==0.37.0 # LEVEL_01
 locket==0.2.1 # LEVEL_01
@@ -495,9 +506,9 @@ markdown==3.3.4 # LEVEL_01
 markupsafe==2.0.1 # LEVEL_01
 mccabe==0.6.1 # LEVEL_01
 memory-profiler==0.58.0 # LEVEL_02
-mistune==0.8.4 # LEVEL_01
+mistune==0.8.4 # LEVEL_01 # The fastest markdown parser in pure Python
 msgpack==1.0.2 # LEVEL_01
-multidict==5.2.0 # LEVEL_01
+multidict==5.2.0 # LEVEL_01 # multidict implementation
 multipledispatch==0.6.0 # LEVEL_02
 multiprocess==0.70.12.2 # LEVEL_02
 multitasking==0.0.9 # LEVEL_01
@@ -514,7 +525,7 @@ opt-einsum==3.3.0 # LEVEL_02
 packaging==21.0 # LEVEL_02
 pandocfilters==1.5.0 # LEVEL_01
 params-flow==0.8.2 # LEVEL_02
-parso==0.8.2 # LEVEL_01
+parso==0.8.2 # LEVEL_01 # A Python Parser
 partd==1.2.0 # LEVEL_02
 pathy==0.6.1 # LEVEL_03
 patsy==0.5.2 # LEVEL_02
@@ -563,7 +574,7 @@ requests-unixsocket==0.2.0 # LEVEL_03
 retrying==1.3.3 # LEVEL_02
 rich==10.12.0 # LEVEL_02
 rsa==4.7.2 # LEVEL_02
-s3transfer==0.5.0 # LEVEL_04
+s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
 sacrebleu==2.0.0 # LEVEL_02
 sacremoses==0.0.46 # LEVEL_02
 schedule==1.1.0 # LEVEL_01
@@ -571,12 +582,11 @@ send2trash==1.8.0 # LEVEL_01
 seqeval==1.2.2 # LEVEL_04
 setuptools-git==1.2 # LEVEL_01
 simpervisor==0.4 # LEVEL_01
-simplejson==3.17.5 # LEVEL_01
 smart-open==5.2.1 # LEVEL_01
 sniffio==1.2.0 # LEVEL_01
 sortedcontainers==2.4.0 # LEVEL_01 # Python Sorted Container Types: SortedList, SortedDict, and SortedSet
 soupsieve==2.2.1 # LEVEL_01
-srsly==2.4.2 # LEVEL_02
+srsly==2.4.2 # LEVEL_02 # Modern high-performance serialization utilities for Python
 statsmodels==0.13.0 # LEVEL_04
 stdlib-list==0.8.0 # LEVEL_01
 stumpy==1.9.2 # LEVEL_03
@@ -586,7 +596,7 @@ termcolor==1.1.0 # LEVEL_01
 terminado==0.12.1 # LEVEL_02
 testpath==0.5.0 # LEVEL_01
 text-unidecode==1.3 # LEVEL_01
-thinc==8.0.11 # LEVEL_03
+thinc==8.0.12 # LEVEL_03 # A refreshing functional take on deep learning, compatible with your favorite libraries
 threadpoolctl==3.0.0 # LEVEL_01
 toml==0.10.2 # LEVEL_01
 tomlkit==0.7.2 # LEVEL_01
@@ -599,7 +609,6 @@ typer==0.4.0 # LEVEL_02
 typeshed-client==1.1.1 # LEVEL_03
 typing-inspect==0.7.1 # LEVEL_02
 ua-parser==0.10.0 # LEVEL_01
-ujson==4.2.0 # LEVEL_01
 unidecode==1.3.2 # LEVEL_01
 urllib3==1.26.7 # LEVEL_01
 url-normalize==1.4.3 # LEVEL_02
@@ -615,6 +624,15 @@ xxhash==2.0.2 # LEVEL_01
 yarl==1.7.0 # LEVEL_02
 zict==2.0.0 # LEVEL_02
 zipp==3.6.0 # LEVEL_01
+#
+# Json
+#
+jsonschema==4.1.2 # LEVEL_02
+json5==0.9.6 # LEVEL_01 # A Python implementation of the JSON5 data format
+json-rpc==1.13.0 # LEVEL_01 # JSON-RPC transport implementation
+simplejson==3.17.5 # LEVEL_01
+ujson==4.2.0 # LEVEL_01
+PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
 #
 #
 # Resolve below
@@ -691,7 +709,7 @@ cattrs==1.8.0 # LEVEL_02
 #
 biopython==1.79 # LEVEL_02
 boost==0.1 # LEVEL_04
-Mastodon_py==1.5.1 # LEVEL_03
+Mastodon_py==1.5.1 # LEVEL_03 # Python wrapper for the Mastodon API
 blurhash==1.1.4 # LEVEL_01
 python-magic==0.4.24 # LEVEL_01
 #
@@ -701,7 +719,7 @@ cligj==0.7.2 # LEVEL_02
 #
 colorcet==2.0.6 # LEVEL_03
 param==1.12.0 # LEVEL_01
-pyct==0.4.8 # LEVEL_02
+pyct==0.4.8 # LEVEL_02 # Python package common tasks for users (e.g. copy examples, fetch data, ...)
 #
 conllu==4.4.1 # LEVEL_01
 cssselect2==0.4.1 # LEVEL_03
@@ -792,4 +810,22 @@ numcodecs==0.9.1 # LEVEL_02 # Python package providing buffer compression and tr
 zarr==2.10.2 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
 fasteners==0.16.3 # LEVEL_02 # python package that provides useful locks
 asciitree==0.3.3 # LEVEL_01 # Draws ASCII trees
+#
+# dbt !! not compatible with many versions !!
+asn1crypto==1.4.0 # LEVEL_01 #
+dbt-extractor==0.4.0 # LEVEL_01 #
+keyring==23.2.1 # LEVEL_03 # Store and access your passwords safely
+leather==0.3.4 # LEVEL_02 # Python charting for 80% of humans
+Logbook==1.5.3 # LEVEL_01 # A logging replacement for Python
+mashumaro==2.8 # LEVEL_02 # Fast serialization framework on top of dataclasses
+minimal-snowplow-tracker==0.0.2 # LEVEL_03 # A minimal snowplow event tracker for Python. Add analytics to your Python and Django apps, webapps and games
+msrest==0.6.21 # LEVEL_04 # AutoRest swagger generator Python client runtime.
+oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decryption, signing, verification and KDFs using the OS crypto libraries. Does not require a compiler, and relies on the OS for patching. Works on Windows, OS X and Linux/BSD.
+parsedatetime==2.6 # LEVEL_01 # Parse human-readable date/time text
+pycryptodomex==3.11.0 # LEVEL_01 # Cryptographic library for Python
+pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
+ruamel_yaml==0.17.16 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
+ruamel_yaml_clib==0.2.6 # LEVEL_01 # C version of reader, parser and emitter for ruamel.yaml derived from libyaml
+#
+sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser.
 #
