--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -82,7 +82,7 @@ docutils==0.17.1 # LEVEL_01 # LOCKED # sphinx 4.2.0 requires docutils<0.18,>=0.1
 #
 tenacity==6.3.1 # LEVEL_02 # LOCKED # luigi requires tenacity<7,>=6.3.0 # Retry code until it succeeds
 #
-agate==1.6.1 # LEVEL_03 # LOCKED # need to figure out why # A data analysis library that is optimized for humans instead of machines
+parsedatetime==2.4 # LEVEL_02 # LOCKED # agate 1.6.3 requires 2.4 # Parse human-readable date/time text
 
 #
 # Generic Low Level Tools
@@ -125,7 +125,7 @@ tensorboard-plugin-wit==1.8.0 # LEVEL_01
 tensorflow==2.6.0 # LEVEL_06
 tensorflow-addons==0.14.0 # LEVEL_02
 tensorflow-datasets==4.4.0 # LEVEL_04
-tensorflow-estimator==2.6.0 # LEVEL_01
+tensorflow-estimator==2.7.0 # LEVEL_01
 tensorflow-hub==0.12.0 # LEVEL_02
 tensorflow-metadata==1.4.0 # LEVEL_03 # Library and standards for schema and statistics
 tensorflow-model-optimization==0.7.0 # LEVEL_03
@@ -190,15 +190,15 @@ babel==2.9.1 # LEVEL_02 # Internationalization utilities
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.19.6 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.22.6 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.19.7 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.22.7 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
-spacy==3.1.3 # LEVEL_04
+spacy==3.1.4 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
 spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
 # spacy-transformers  # downgrades transformers !!
 #
-transformers==4.12.0 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
+transformers==4.12.2 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
 datasets==1.14.0 # LEVEL_04
 #
 tokenizers==0.10.3 # LEVEL_01
@@ -212,6 +212,8 @@ wordcloud==1.8.1 # LEVEL_04
 #
 imbalanced-learn==0.8.1 # LEVEL_04
 kaggle==1.5.12 # LEVEL_03
+#
+agate==1.6.3 # LEVEL_03 # A data analysis library that is optimized for humans instead of machines
 #
 dask[complete]==2021.10.0 # LEVEL_03
 dask-glm==0.2.0 # LEVEL_04
@@ -299,7 +301,7 @@ scs==2.1.4 # LEVEL_03
 qtconsole==5.1.1 # LEVEL_05
 qtpy==1.11.2 # LEVEL_01
 pysimplegui==4.53.0 # LEVEL_01
-pyqt5==5.15.5 # LEVEL_02
+pyqt5==5.15.6 # LEVEL_02
 pyqt5-qt5==5.15.2 # LEVEL_01
 pyqt5-sip==12.9.0 # LEVEL_01
 pyqtgraph==0.12.3 # LEVEL_02 # for Chaos
@@ -371,6 +373,8 @@ jupyterlab-pygments==0.1.2 # LEVEL_02
 jupyterlab-server==2.8.2 # LEVEL_07
 jupyterlab-widgets==1.0.2 # LEVEL_01
 #
+widgetsnbextension==3.5.2 # LEVEL_07 # IPython HTML widgets for Jupyter
+#
 notebook==6.4.5 # LEVEL_06 # A web-based notebook environment for interactive computing
 
 #
@@ -386,7 +390,7 @@ beautifulsoup4==4.10.0 # LEVEL_02
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?)
 cloudscraper==1.2.58 # LEVEL_04 # bypass Cloudflare's anti-bot page
 colorama==0.4.4 # LEVEL_01 Cross-platform colored terminal text
-filelock==3.3.1 # LEVEL_01
+filelock==3.3.2 # LEVEL_01
 #
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes
 pyflakes==2.4.0 # LEVEL_01 # required by flake8
@@ -448,9 +452,9 @@ click==8.0.3 # LEVEL_01 # Python composable command line interface toolkit
 cloudpickle==2.0.0 # LEVEL_01
 codemod==1.0.0 # LEVEL_01
 commonmark==0.9.1 # LEVEL_01
-coverage==6.0.2 # LEVEL_01
+coverage==6.1 # LEVEL_01
 croniter==1.0.15 # LEVEL_03
-cycler==0.10.0 # LEVEL_02
+cycler==0.11.0 # LEVEL_01 # Composable style cycles
 cymem==2.0.6 # LEVEL_01
 debugpy==1.5.1 # LEVEL_01 # Debug Adapter Protocol for Python
 decorator==5.1.0 # LEVEL_01
@@ -485,9 +489,9 @@ hijri-converter==2.2.2 # LEVEL_01
 hsluv==5.0.2 # LEVEL_01
 httplib2==0.20.1 # LEVEL_02
 idna==3.3 # LEVEL_01
-importlib-resources==5.3.0 # LEVEL_02
+importlib-resources==5.4.0 # LEVEL_02
 ipykernel==6.4.2 # LEVEL_04
-ipython==7.28.0 # LEVEL_03
+ipython==7.29.0 # LEVEL_03
 ipython-genutils==0.2.0 # LEVEL_01
 ipywidgets==7.6.5 # LEVEL_08
 iso8601==0.1.16 # LEVEL_01
@@ -522,7 +526,7 @@ netifaces==0.11.0 # LEVEL_01
 oauth2client==4.1.3 # LEVEL_03
 oauthlib==3.1.1 # LEVEL_01
 opt-einsum==3.3.0 # LEVEL_02
-packaging==21.0 # LEVEL_02
+packaging==21.2 # LEVEL_02
 pandocfilters==1.5.0 # LEVEL_01
 params-flow==0.8.2 # LEVEL_02
 parso==0.8.2 # LEVEL_01 # A Python Parser
@@ -533,11 +537,11 @@ pexpect==4.8.0 # LEVEL_02
 pickleshare==0.7.5 # LEVEL_01
 portalocker==2.3.2 # LEVEL_01
 preshed==3.0.6 # LEVEL_02
-prometheus-client==0.11.0 # LEVEL_01
+prometheus-client==0.12.0 # LEVEL_01
 promise==2.3 # LEVEL_02
 prompt-toolkit==3.0.21 # LEVEL_02
 proto-plus==1.19.7 # LEVEL_02
-protobuf==3.19.0 # LEVEL_01
+protobuf==3.19.1 # LEVEL_01
 psutil==5.8.0 # LEVEL_01
 ptyprocess==0.7.0 # LEVEL_01
 py-cpuinfo==8.0.0 # LEVEL_01
@@ -551,7 +555,7 @@ pycares==4.1.2 # LEVEL_03
 pycocotools==2.0.2 # LEVEL_04
 pycparser==2.20 # LEVEL_01
 pydantic==1.8.2 # LEVEL_02
-pyinstaller==4.5.1 # LEVEL_03
+pyinstaller==4.6 # LEVEL_03
 pyinstaller-hooks-contrib==2021.3 # LEVEL_01 # deployment
 pyluach==1.3.0 # LEVEL_01
 pymeeus==0.5.11 # LEVEL_01
@@ -618,7 +622,6 @@ webencodings==0.5.1 # LEVEL_01
 websockets==10.0 # LEVEL_01
 websocket-client==1.2.1 # LEVEL_01
 werkzeug==2.0.2 # LEVEL_01
-widgetsnbextension==3.5.1 # LEVEL_07
 wireless==0.3.3 # LEVEL_01
 xxhash==2.0.2 # LEVEL_01
 yarl==1.7.0 # LEVEL_02
@@ -675,7 +678,7 @@ trio==0.19.0 # LEVEL_03
 trio-websocket==0.9.2 # LEVEL_04
 wsproto==1.0.0 # LEVEL_02
 #
-tzlocal==4.0.2 # LEVEL_03
+tzlocal==4.1 # LEVEL_03
 pytz-deprecation-shim==0.1.0.post0 # LEVEL_02
 tzdata==2021.5 # LEVEL_01
 validators==0.18.2 # LEVEL_02
@@ -737,7 +740,7 @@ dlpack==0.1 # LEVEL_01
 faiss-cpu==1.7.1.post2 # LEVEL_01
 #
 fastrlock==0.8 # LEVEL_01
-fastavro==1.4.6 # LEVEL_01
+fastavro==1.4.7 # LEVEL_01
 #
 fiona==1.8.20 # LEVEL_03
 munch==2.5.0 # LEVEL_02
@@ -821,7 +824,6 @@ mashumaro==2.8 # LEVEL_02 # Fast serialization framework on top of dataclasses
 minimal-snowplow-tracker==0.0.2 # LEVEL_03 # A minimal snowplow event tracker for Python. Add analytics to your Python and Django apps, webapps and games
 msrest==0.6.21 # LEVEL_04 # AutoRest swagger generator Python client runtime.
 oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decryption, signing, verification and KDFs using the OS crypto libraries. Does not require a compiler, and relies on the OS for patching. Works on Windows, OS X and Linux/BSD.
-parsedatetime==2.6 # LEVEL_01 # Parse human-readable date/time text
 pycryptodomex==3.11.0 # LEVEL_01 # Cryptographic library for Python
 pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
 ruamel_yaml==0.17.16 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
