--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -95,10 +95,10 @@ scipy==1.7.1 # LEVEL_02 # Scientific Library for Python
 seaborn==0.11.2 # LEVEL_04 # Statistical data visualization
 numba==0.54.1 # LEVEL_02
 openpyxl==3.0.9 # LEVEL_02
-xlsxwriter==3.0.1 # LEVEL_01 needed for pandas XLSX ...
+xlsxwriter==3.0.2 # LEVEL_01 needed for pandas XLSX ...
 toolz==0.11.1 # LEVEL_01
 pybullet==3.2.0 # LEVEL_01
-httpx==0.20.0 # LEVEL_04 # tda-api requires this version, tda-api
+httpx==0.20.0 # LEVEL_04
 
 #
 # Super Collectors .. building on others
@@ -190,8 +190,8 @@ babel==2.9.1 # LEVEL_02 # Internationalization utilities
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.19.7 # LEVEL_05 # The AWS SDK for Python # required by bertviz
-botocore==1.22.7 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
+boto3==1.19.8 # LEVEL_05 # The AWS SDK for Python # required by bertviz
+botocore==1.22.8 # LEVEL_03 # Low-level, data-driven core of boto 3 # required by boto3
 #
 spacy==3.1.4 # LEVEL_04
 spacy-legacy==3.0.8 # LEVEL_01
@@ -423,9 +423,10 @@ lockfile==0.12.2 # LEVEL_01 # Platform-independent file locking module
 
 aenum==3.1.1 # LEVEL_01
 aiodns==3.0.0 # LEVEL_04
-aiohttp==3.7.4.post0 # LEVEL_03 # Async http client/server framework (asyncio)
+aiohttp==3.8.0 # LEVEL_03 # Async http client/server framework (asyncio)
+async-timeout==4.0.0 # LEVEL_02
 aiohttp-socks==0.6.0 # LEVEL_04
-aioredis==2.0.0 # 1.3.1 # LEVEL_02
+aioredis==2.0.0 # 1.3.1 # LEVEL_03
 altgraph==0.17.2 # LEVEL_01
 ansi2html==1.6.0 # LEVEL_01
 anyio==3.3.4 # LEVEL_02
@@ -435,7 +436,6 @@ argon2-cffi==21.1.0 # LEVEL_03
 arrow==1.2.1 # LEVEL_03
 ast-decompiler==0.4.0 # LEVEL_01
 astunparse==1.6.3 # LEVEL_02
-async-timeout==3.0.1 # LEVEL_01
 asynq==1.4.0 # LEVEL_03
 attrs==21.2.0 # LEVEL_01
 backcall==0.2.0 # LEVEL_01
@@ -490,7 +490,7 @@ hsluv==5.0.2 # LEVEL_01
 httplib2==0.20.1 # LEVEL_02
 idna==3.3 # LEVEL_01
 importlib-resources==5.4.0 # LEVEL_02
-ipykernel==6.4.2 # LEVEL_04
+ipykernel==6.5.0 # LEVEL_04 # IPython Kernel for Jupyter
 ipython==7.29.0 # LEVEL_03
 ipython-genutils==0.2.0 # LEVEL_01
 ipywidgets==7.6.5 # LEVEL_08
@@ -831,3 +831,5 @@ ruamel_yaml_clib==0.2.6 # LEVEL_01 # C version of reader, parser and emitter for
 #
 sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser.
 #
+aiosignal==1.2.0 # LEVEL_02 # a list of registered asynchronous callbacks
+frozenlist==1.2.0 # LEVEL_01 # A list-like structure which implements collections.abc.MutableSequence
