--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -70,7 +70,7 @@ kaleido==0.2.1 # LEVEL_01 # LOCKED # somehow can't update to 0.2.1.post
 #
 smmap==4.0.0 # LEVEL_01 # LOCKED # can't update to 5.0.0 yet, due to gitdb ?
 #
-pyparsing==2.4.7 # LEVEL_01 # LOCKED # needed by google-api-python-client
+pyparsing==2.4.7 # LEVEL_01 # LOCKED # Python parsing module # packaging 21.2 requires pyparsing<3,>=2.0.2; httplib2 0.20.1 requires pyparsing<3,>=2.4.2
 #
 stable-baselines3==1.2.0 # LEVEL_04 # LOCKED # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms. # version 1.3.0 depends on gym<0.20 :-(
 #
