--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -64,7 +64,7 @@ cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.6
 #
 graphviz==0.17 # LEVEL_01 # LOCKED # needed for dependecy graphing .. missing dependencies, but still needed
 #
-box2d==2.3.2 # LEVEL_01 # LOCKED
+Box2D==2.3.2 # LEVEL_01 # LOCKED
 #
 kaleido==0.2.1 # LEVEL_01 # LOCKED # somehow can't update to 0.2.1.post
 #
@@ -95,7 +95,7 @@ scipy==1.7.1 # LEVEL_02 # Scientific Library for Python
 seaborn==0.11.2 # LEVEL_04 # Statistical data visualization
 numba==0.54.1 # LEVEL_02
 openpyxl==3.0.9 # LEVEL_02
-xlsxwriter==3.0.2 # LEVEL_01 needed for pandas XLSX ...
+XlsxWriter==3.0.2 # LEVEL_01 needed for pandas XLSX ...
 toolz==0.11.1 # LEVEL_01
 pybullet==3.2.0 # LEVEL_01
 httpx==0.20.0 # LEVEL_04
@@ -112,7 +112,7 @@ box2d-py==2.3.8 # LEVEL_01
 tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without Tensorflow
 ray==1.8.0 # LEVEL_03 # Ray provides a simple, universal API for building distributed applications.
 lz4==3.1.3 # LEVEL_01
-gputil==1.4.0 # LEVEL_01 # Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
+GPUtil==1.4.0 # LEVEL_01 # Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
 wrds==3.1.1 # LEVEL_04 # access to WRDS Data, SQL 2 pandas
 
 #
@@ -134,7 +134,7 @@ tf-models-official==2.6.0 # LEVEL_08
 tf-slim==1.1.0 # LEVEL_03
 #
 keras==2.6.0 # LEVEL_01
-keras-preprocessing==1.1.2 # LEVEL_02
+Keras-Preprocessing==1.1.2 # LEVEL_02
 #
 huggingface-hub==0.0.19 # LEVEL_03 # Client library to download and publish models on the huggingface.co hub
 #
@@ -149,7 +149,7 @@ torchaudio==0.10.0 # LEVEL_03
 torchvision==0.11.1 # LEVEL_03
 pytorch-ranger==0.1.1 # LEVEL_03 # Ranger - a synergistic optimizer using RAdam (Rectified Adam) and LookAhead in one codebase
 #
-theano==1.0.5 # LEVEL_03
+Theano==1.0.5 # LEVEL_03
 nose==1.3.7 # LEVEL_01
 #
 fastai==2.5.3 # LEVEL_05
@@ -175,9 +175,9 @@ pmdarima==1.8.3 # LEVEL_05
 #darts>=0.9.1  # time series predictions (behind on requirements)
 #tsai>=0.2.18  # time series and sequences, triggers huge number of dependencies !
 prophet==1.0.1 # LEVEL_05 # time series forecasts from Facebook, depends on pandas
-cython==0.29.24 # LEVEL_01 # pystan: cython!=0.25.1,>=0.22
+Cython==0.29.24 # LEVEL_01 # pystan: cython!=0.25.1,>=0.22
 convertdate==2.3.2 # LEVEL_02 # for prophet (requires pytz, pymeeus)
-lunarcalendar==0.0.9 # LEVEL_03 # for prophet
+LunarCalendar==0.0.9 # LEVEL_03 # for prophet
 holidays==0.11.3.1 # LEVEL_03 # for prophet
 
 #
@@ -185,7 +185,7 @@ holidays==0.11.3.1 # LEVEL_03 # for prophet
 #
 nltk==3.6.5 # LEVEL_02
 #
-babel==2.9.1 # LEVEL_02 # Internationalization utilities
+Babel==2.9.1 # LEVEL_02 # Internationalization utilities
 #
 bert-for-tf2==0.14.9 # LEVEL_03
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
