--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -114,7 +114,9 @@ ray==1.8.0 # LEVEL_03 # Ray provides a simple, universal API for building distri
 lz4==3.1.3 # LEVEL_01 # LZ4 Bindings for Python
 GPUtil==1.4.0 # LEVEL_01 # GPUtil is a Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
 wrds==3.1.1 # LEVEL_04 # Python access to WRDS Data
-
+#
+pytorch-lightning==1.5.0 # LEVEL_06 # PyTorch Lightning is the lightweight PyTorch wrapper for ML researchers. Scale your models. Write less boilerplate
+performer-pytorch==1.1.2 # LEVEL_04 # Performer - Pytorch
 #
 #
 # Machine Learning
@@ -835,23 +837,20 @@ aiosignal==1.2.0 # LEVEL_02 # aiosignal: a list of registered asynchronous callb
 frozenlist==1.2.0 # LEVEL_01 # A list-like structure which implements collections.abc.MutableSequence
 #
 #
-#performer-pytorch==1.1.2
-#nystrom-attention==0.0.11
-#
-pytorch-lightning==1.5.0 # LEVEL_06
-pyDeprecate==0.3.1 # LEVEL_01
-torchmetrics==0.6.0 # LEVEL_03
-#
+wandb==0.12.6 # LEVEL_04 # A CLI and library for interacting with the Weights and Biases API
+axial-positional-embedding==0.2.1 # LEVEL_03 # Axial Positional Embedding
+local-attention==1.4.3 # LEVEL_03 # Local windowed attention, for language modeling
+nystrom-attention==0.0.11 # LEVEL_03 # Nystrom Attention - Pytorch
+torchmetrics==0.6.0 # LEVEL_03 # PyTorch native Metrics
 netCDF4==1.5.8 # LEVEL_03 # Provides an object-oriented python interface to the netCDF version 4 library
 cftime==1.5.1.1 # LEVEL_02 # Time-handling functionality from netcdf4-python
-#
 omegaconf==2.1.1 # LEVEL_02 # A flexible configuration library
-antlr4-python3-runtime==4.8 # LEVEL_01 # ANTLR 4.8 runtime for Python 3.7
-#
-wandb==0.12.6 # LEVEL_04 # A CLI and library for interacting with the Weights and Biases API
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
 sentry-sdk==1.4.3 # LEVEL_02 # Python client for Sentry (https://sentry.io)
 yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
+einops==0.3.2 # LEVEL_01 # A new flavour of deep learning operations
+pyDeprecate==0.3.1 # LEVEL_01 # Deprecation tooling
+antlr4-python3-runtime==4.8 # LEVEL_01 # ANTLR 4.8 runtime for Python 3.7
 configparser==5.1.0 # LEVEL_01 # Updated configparser from Python 3.8 for Python 2.6+
 pathtools==0.1.2 # LEVEL_01 # File system general utilities
 shortuuid==1.0.1 # LEVEL_01 # A generator library for concise, unambiguous and URL-safe UUIDs
